--- a/anpanmoneyv1/src/components/pages/Home.css
+++ b/anpanmoneyv1/src/components/pages/Home.css
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: row;
   float: left;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 .debody #side {
@@ -57,10 +58,21 @@
   bottom: 0;
   right: 0;
 }
+.TransactionBox #closeIcon {
+  position: absolute;
+  color: red;
+  bottom: 0;
+  left: 0;
+}
 
 .TransactionBox #addIcon :hover {
   cursor: pointer;
   background-color: lightgreen;
+}
+
+.TransactionBox #closeIcon :hover {
+  cursor: pointer;
+  background-color: rgb(235, 119, 119);
 }
 .container #rInfoS {
   font-size: 25px;
@@ -172,9 +184,22 @@
   border-radius: 20px;
 }
 
+
+
 .container #bStatusContainer {
   border-radius: 10px;
   width: 70vw;
   height: 105px;
   background-color: #efefef;
+}
+
+
+.deleteFlex{
+  display: flex;
+}
+.deleteFlex #lastcol1{
+  flex: 100%;
+}
+.deleteFlex #lastcol2{
+  flex: 5%;
 }
